--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,7 +7,22 @@
     android:background="@color/colorPrimary"
     tools:context=".ui.detail.DetailActivity">
 
+    <ImageView
+        android:id="@+id/imgDance"
+        android:layout_width="match_parent"
+        android:layout_height="340dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:contentDescription="@string/img_cover_detail"
+        android:scaleType="centerCrop"
+        android:transitionName="@string/imgDance"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
@@ -22,10 +37,10 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="150dp"
+                android:layout_marginTop="300dp"
                 android:background="@drawable/bg_card_detail"
                 android:paddingStart="16dp"
-                android:paddingTop="160dp"
+                android:paddingTop="25dp"
                 android:paddingEnd="16dp"
                 android:paddingBottom="16dp">
 
@@ -71,19 +86,6 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <ImageView
-                android:id="@+id/imgDance"
-                android:layout_width="match_parent"
-                android:layout_height="280dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="32dp"
-                android:contentDescription="@string/img_cover_detail"
-                android:scaleType="centerCrop"
-                android:transitionName="@string/imgDance" />
 
         </RelativeLayout>
 
