--- a/app/src/main/res/layout/item_row_detail_images.xml
+++ b/app/src/main/res/layout/item_row_detail_images.xml
@@ -10,6 +10,7 @@
         android:id="@+id/ivImages"
         android:layout_width="match_parent"
         android:layout_height="150dp"
+        android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
