--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/imgProfile"
         android:layout_width="match_parent"
-        android:layout_height="340dp"
+        android:layout_height="370dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -37,7 +37,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="320dp"
+                android:layout_marginTop="340dp"
                 android:background="@drawable/bg_card_detail"
                 android:paddingStart="16dp"
                 android:paddingTop="25dp"
@@ -146,14 +146,16 @@
 
                 <TextView
                     android:id="@+id/txtLinkedinInfo"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:textSize="18sp"
-                    android:text="@string/aditiya_ihzar_eka_prayogo"
-                    android:maxLines="1"
+                    android:layout_marginEnd="8dp"
                     android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="@string/aditiya_ihzar_eka_prayogo"
+                    android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="@+id/txtLinkedin"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/txtLinkedin"
                     app:layout_constraintTop_toTopOf="@+id/txtLinkedin" />
 
